fixes flexbox overflow columns for IE11 and firefox

--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -18,7 +18,7 @@
 
 .finalist {
 	position: relative; 
-	display: inline-block; 
+	display: block; 
 	transition: all .1s ease-in; 
 	cursor: pointer; 
 
